[gd_scene load_steps=13 format=3 uid="uid://65s5oygvic5d"]

[ext_resource type="Script" uid="uid://b5sy5ltkh6o14" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://bo4j3rpvppuh6" path="res://SpinCube.tscn" id="2_jyhfs"]
[ext_resource type="Script" uid="uid://c3hn4jjt03sx6" path="res://scripts/SelectionHandler.gd" id="2_tefeu"]
[ext_resource type="Script" uid="uid://cdhel8vvc2t83" path="res://scenes/camera_root.gd" id="3_sugp2"]
[ext_resource type="Script" uid="uid://e3f1ox6y6cvg" path="res://addons/Gizmo3DScript/gizmo3D.gd" id="3_tbgi4"]
[ext_resource type="Shader" uid="uid://ciap7plrb4xcr" path="res://scenes/main.gdshader" id="5_tbgi4"]

[sub_resource type="World3D" id="World3D_jyhfs"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_o5qli"]

[sub_resource type="Sky" id="Sky_0wfyh"]
sky_material = SubResource("ProceduralSkyMaterial_o5qli")

[sub_resource type="Environment" id="Environment_sugp2"]
background_mode = 2
sky = SubResource("Sky_0wfyh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tbgi4"]
render_priority = 0
shader = ExtResource("5_tbgi4")
shader_parameter/outlineColor = Color(0, 0, 0, 0.78)
shader_parameter/depth_threshold = 0.2
shader_parameter/normal_threshold = 0.2
shader_parameter/normal_smoothing = 0.25
shader_parameter/max_thickness = 1.0
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="QuadMesh" id="QuadMesh_jyhfs"]
material = SubResource("ShaderMaterial_tbgi4")
flip_faces = true
size = Vector2(2, 2)

[node name="Base" type="Node3D"]
script = ExtResource("1_sugp2")

[node name="SelectionHandler" type="Node" parent="."]
script = ExtResource("2_tefeu")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CubeButton" type="Button" parent="UI"]
layout_mode = 2
offset_right = 83.0
offset_bottom = 31.0
text = "Add Cube"

[node name="PropertiesPanel" type="PanelContainer" parent="UI"]
visible = false
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="UI/PropertiesPanel"]
layout_mode = 2

[node name="Header" type="Label" parent="UI/PropertiesPanel/VBox"]
layout_mode = 2
text = "Selected Objects: 0"
horizontal_alignment = 1

[node name="ColorPicker" type="ColorPicker" parent="UI/PropertiesPanel/VBox"]
layout_mode = 2
presets_visible = false

[node name="RotationIndicator" type="SubViewportContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -144.0
offset_bottom = 116.0
grow_horizontal = 0
stretch = true

[node name="Viewport" type="SubViewport" parent="UI/RotationIndicator"]
own_world_3d = true
world_3d = SubResource("World3D_jyhfs")
transparent_bg = true
handle_input_locally = false
msaa_3d = 2
physics_object_picking = true
size = Vector2i(144, 116)
render_target_update_mode = 4

[node name="SpinCube" parent="UI/RotationIndicator/Viewport" instance=ExtResource("2_jyhfs")]

[node name="Gizmo" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73555, 0, 0)
script = ExtResource("3_tbgi4")
use_local_space = true
rotate_snap = 45.0
metadata/_custom_type_script = "uid://e3f1ox6y6cvg"

[node name="Model" type="Node3D" parent="."]

[node name="Camera Root" type="Node3D" parent="."]
script = ExtResource("3_sugp2")

[node name="Camera" type="Camera3D" parent="Camera Root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
environment = SubResource("Environment_sugp2")
projection = 1
current = true
size = 10.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_jyhfs")

[connection signal="gui_input" from="UI" to="Camera Root" method="_on_control_gui_input"]
[connection signal="pressed" from="UI/CubeButton" to="." method="_on_cube_button_pressed"]
[connection signal="update_target" from="UI/RotationIndicator/Viewport/SpinCube" to="Camera Root" method="_on_spin_cube_update_target"]
